<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="top|center"
              android:orientation="vertical">

    <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexWrap="wrap">

        <androidx.cardview.widget.CardView
                android:id="@+id/cardComic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                <ImageView
                        android:id="@+id/iv_title_comic"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/imgLoading"
                        android:src="@mipmap/img_title_comic"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_title_comic"
                        android:gravity="center"
                        android:text="@string/str_main_title_comic"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
                android:id="@+id/cardDoujin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                <ImageView
                        android:id="@+id/iv_title_doujin"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/imgLoading"
                        android:padding="5dp"
                        android:src="@mipmap/img_title_doujin"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_title_doujin"
                        android:gravity="center"
                        android:text="@string/str_main_title_doujin"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
                android:id="@+id/cardCg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                <ImageView
                        android:id="@+id/iv_title_cg"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/imgLoading"
                        android:padding="5dp"
                        android:src="@mipmap/img_title_cg"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_title_cg"
                        android:gravity="center"
                        android:text="@string/str_main_title_cg"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cardHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                <ImageView
                        android:id="@+id/iv_title_history"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/imgLoading"
                        android:padding="5dp"
                        android:src="@mipmap/img_title_cg"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_title_history"
                        android:gravity="center"
                        android:text="@string/str_main_title_history"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>
